# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  outomaatti.toml  pyproject.toml  tasks.py
data/: 314.rle  52513m.rle  _invalid1.rle  _invalid2.rle  _invalid3.rle  _invalid4.rle  _valid.rle  bigun.rle  blinkerfuse.rle  blocklayingswitchengine.rle  bulldozer.rle  conduit1.rle  copperhead.rle  gardensofeden2009.rle  glider.rle  gliderproducingswitchengine.rle  loafer.rle  lobster.rle  medusa.rle  noahsark.rle  p28blockpuffer.rle  p81_180_glider_loop.rle  period44mwssgun.rle  puffer1.rle  puffer2.rle  queenbee.rle  syringe.rle  wing.rle
dokumentaatio/: arkkitehtuuri.md  changelog.md  changelog.txt  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: config.py  database_connection.py  index.py  initialize_database.py  textmode_highlife.py  textmode_life.py
src/entities/: category.py  library.py  pattern.py  rules.py  universe.py
src/repositories/: library_repository.py  pattern_repository.py
src/repositories/decoders/: rle.py
src/repositories/importers/: rle.py
src/rules/: gameoflife.py  highlife.py  life.py  randomlife.py  ruleset.py
src/services/: outomaatti_service.py  universe_service.py
src/tests/entities/: category_test.py  library_test.py  pattern_test.py  universe_test.py
src/tests/repositories/: library_repository_test.py
src/tests/services/: outomaatti_service_test.py  universe_service_test.py
src/ui/: ui.py
src/ui/components/: confirmation.py  info.py  menu.py  patternchooser.py  patternpicker.py  popup.py  settings.py  simulation.py  status.py  theme.py
(+6 files in other folders)
