[tool.poetry]
name = "outomaatti"
version = "0.1.0"
description = "Outomaatti"
authors = ["Markus <markus.aurala@gmail.com>"]
readme = "README.md"

# Numpy ^1.24 eteenpäin: Python 3.9
# Numpy 1.24 ei asennu Python 3.12:lla
# Kurssin vaatimus: Python ^3.8

[tool.poetry.dependencies]
python = ">= 3.8, < 3.12"
invoke = "^2.2.0"
numpy = "1.24"
pygame = "^2.5.2"
dynaconf = "^3.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
